#94 Added sorting in assignedUsers, added methods to assign and remove user from card